crates/temper-services/tests/compile_fail/forge_verified_slack_principal.stderr
error[E0451]: field `id` of struct `VerifiedSlackPrincipal` is private
  --> tests/compile_fail/forge_verified_slack_principal.rs:12:9
   |
11 |     let _forged = VerifiedSlackPrincipal {
   |                   ---------------------- in this type
12 |         id: "slack:T1:U1".to_string(),
   |         ^^ private field
